layout bug fix

--- a/e2e-hrc/src/index.css
+++ b/e2e-hrc/src/index.css
@@ -8,6 +8,7 @@
   body {
     @apply font-body text-text-body;
     margin: 0;
+    overflow-x: hidden;
   }
   h1, h2, h3, h4, h5, h6 {
     @apply font-heading text-primary;
